# radio

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  agent.md  bootstrap_wsl_ansible.sh  pyproject.toml  qodana.yaml  requirements-all.txt  requirements-dev.txt  requirements-full.txt  requirements.txt  scratch_3.md  ssh-agent.ps1
.codex/skills/openspec-apply-change/: SKILL.md
.codex/skills/openspec-archive-change/: SKILL.md
.codex/skills/openspec-explore/: SKILL.md
.codex/skills/openspec-propose/: SKILL.md
.codex/skills/openspec-sync-specs/: SKILL.md
.github/workflows/: ci-meta.yml  ci.yml  docker-build.yml  lockfile-check.yml  qodana_code_quality.yml  switch-version.yml
.run/: pre-commit.run.xml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_queue_runtime.py  0003_queue_failure_detail.py
ansible/: README.md  ansible.cfg  local-vars.example.yml  site-clean.yml  site.yml
ansible/group_vars/: all.yaml  vps_root.yml  vps_vpn.yml
ansible/inventory/: hosts.example.yml  hosts.yml
ansible/roles/bootstrap/handlers/: main.yml
ansible/roles/bootstrap/tasks/: main.yml
ansible/roles/bootstrap/templates/: jail.local.j2  sshd_config.j2
ansible/roles/users/tasks/: main.yml
ansible/roles/wireguard_vpn/defaults/: main.yml
ansible/roles/wireguard_vpn/handlers/: main.yml
ansible/roles/wireguard_vpn/meta/: main.yml
ansible/roles/wireguard_vpn/tasks/: firewall.yml  main.yml  peer.yml
ansible/roles/wireguard_vpn/templates/: client.conf.j2  nft-wg.nft.j2  wg.conf.j2
ansible/roles/wireguard_vpn/vars/: Debian.yml
ansible/roles/wireguard_vpn_remove/defaults/: main.yml
ansible/roles/wireguard_vpn_remove/handlers/: main.yml
ansible/roles/wireguard_vpn_remove/meta/: main.yml
ansible/roles/wireguard_vpn_remove/tasks/: main.yml
ansible/templates/: radio-edge-nginx.conf.j2  radio-ingress.yaml.j2  radio-issuer.yaml.j2
background/: preview.sh  render.sh  render_webm.sh
background/govnovoz_art/: render_final.sh
deploy/: kustomization.yaml
deploy/etc/cloudflared/: cloudflare.md  config.yml
deploy/etc/nginx/: nginx.md
deploy/etc/nginx/conf.d/: radio.conf
deploy/etc/systemd/system/: cloudflared.service  radio.service
deploy/home/radio/: health_check.sh  playlist.txt  radio.sh  radio_packages.md  radio_service.md
deploy/k8s/: alembic-job.yaml  app.yaml  ingress.yaml  issuer.yaml  namespace.yaml  network-policy.yaml  postgres-backup.yaml  postgres.yaml  secret.example.yaml
deploy/k8s/config/: config.yaml  nginx.conf  radio.liq
deploy/var/www/html/: player.html
docker/app/: Dockerfile
docs/: development-process.md  runtime.md  tech-debt.md
ffmpeg/: comands.sh  play.sh  play_always.sh  play_always_hls.sh  play_always_mp4.sh  play_fifo.sh  play_loop.sh  service.sh
frontend/: .prettierrc.json  .stylelintrc.json  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/apps/admin/: index.html
frontend/apps/admin/src/: actions.test.ts  actions.ts  main.tsx
frontend/apps/player/: index.html
frontend/apps/player/src/: hls.ts  main.tsx  mediaSession.ts  pwa.ts  state.test.ts  state.ts
frontend/apps/shared/: styles.css
frontend/public/: manifest.webmanifest  sw.js
icecast/: comands.sh  icecast.xml
makefiles/: ansible.mk  common.mk  dev.mk  k8s-import-image.ps1  k8s.mk  search.mk  setup.mk
manager/: config.py  coordinator.py  hls.py  logger.py  logging.py  main.py  now_playing.py
manager/api/: __init__.py  app.py  dependencies.py  routes.py  schemas.py  serializers.py  web.py
manager/data/: config.example.yaml  radio.liq  radio.sqlite
manager/liquidsoap/: liquidsoap.py  telnet.py
manager/playback/: __init__.py  queue_player.py  telnet.py
manager/prefetch/: data.py  prefetch.py  utils.py
manager/runner/: __init__.py  backoff.py  control.py  node.py  process_runnable.py  process_utils.py  runner.py  service_runnable.py  signals.py  types.py  utils.py
manager/search/: search_helpers.py  search_lru.py  search_service.py  telemetry.py
manager/track_queue/: db.py  migrations.py  models.py  offers_repo.py  orm.py  orm_typing.py  queue_repo.py  repo.py  repo_service.py  tracks_repo.py
ngnix/: buffer.sh  comands.sh  heath_check.sh  player.html  radio.conf
openspec/: config.yaml
openspec/changes/add-player-pwa-admin-frontend/: design.md  proposal.md  tasks.md
openspec/changes/add-player-pwa-admin-frontend/specs/api-surface/: spec.md
openspec/changes/add-player-pwa-admin-frontend/specs/code-quality/: spec.md
openspec/changes/add-player-pwa-admin-frontend/specs/deployment/: spec.md
openspec/changes/add-player-pwa-admin-frontend/specs/web-client-surface/: spec.md
openspec/specs/api-surface/: spec.md
openspec/specs/app-configuration/: spec.md
openspec/specs/code-quality/: spec.md
openspec/specs/data-persistence/: spec.md
openspec/specs/deployment/: spec.md
openspec/specs/engineering-process/: spec.md
openspec/specs/hls-output/: spec.md
openspec/specs/liquidsoap-control/: spec.md
openspec/specs/now-playing/: spec.md
openspec/specs/offers-workflow/: spec.md
openspec/specs/prefetch-cache/: spec.md
openspec/specs/queue-playback/: spec.md
openspec/specs/runtime-pipeline/: spec.md
openspec/specs/search-ingestion/: spec.md
openspec/specs/track-catalog/: spec.md
ru-deploy/: deploy.sh  radio.conf  radio.config
scripts/: ci-local.ps1  precommit_pytest.py
scripts/badge/: badge_amend.py  gen_badge.py
search/: cli.py  config.yaml  db.sqlite  filters.py  make_playlist.py  make_queue.py  playlist.txt  repo.py  searcher.py
tests/integration/: test_postgres_alembic.py
tests/manager/: test_api.py  test_config.py  test_frontend_boundary.py  test_hls.py  test_now_playing.py
tests/manager/playback/: test_queue_player.py  test_telnet.py
tests/manager/prefetch/: test_prefetch.py
tests/manager/search/: test_search_helpers.py  test_search_service.py  test_telemetry.py
tests/manager/track_queue/: test_db.py  test_repo.py
tests/scripts/: test_precommit_pytest.py
tests/scripts/badge/: test_badge_amend.py  test_gen_badge.py
