[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "radio_manager"
description = "Менеджер онлайн радио странции"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "yt-dlp>=2025.8.20",
  "typer>=0.12",
  "pydantic>=2.11.9",
  "pydantic-settings>=2.11.0",
  "pyyaml>=6.0.3",
  "jinja2>=3.1",
  "structlog>=25.4.0"
]
[project.optional-dependencies]
dev = [
  "ruff>=0.13.2",
  "black>=25.9.0",
  "pytest>=8.4.2",
  "pytest-asyncio>=1.2.0",
  "pytest-cov>=7.0.0",
  "mypy>=1.18.2",
  "pre-commit>=3.7",
  "coverage[toml]>=7.10.7",
  "anybadge>=1.16",
  "pip-audit>=2.7",
  "types-PyYAML>=6.0.12.20250915",
  "pytest-builtin-types",
  "types-requests>=2.32.4.20250913"
]

[tool.setuptools.packages.find]
where = ["."]

# ---------- Black ----------
[tool.black]
line-length = 100
target-version = ["py311"]
skip-string-normalization = false

# ---------- Ruff (новая схема 0.6+) ----------
[tool.ruff]
line-length = 100
target-version = "py311"
respect-gitignore = true
exclude = ["*.j2"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PT", "RUF", "C4", "ANN"]
ignore = ["RUF001", "RUF002", "RUF003"]
# Часто удобно игнорить F401 в __init__.py, где реэкспортируем API:
per-file-ignores = { "__init__.py" = ["F401"] }

[tool.ruff.lint.isort]
known-first-party = ["scripts", "manager", "tests"]
combine-as-imports = true
lines-after-imports = 2

# Форматирование отдадим Black; Ruff не будет форматить код как форматтер.
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
strict_optional = false
disallow_untyped_defs = false
files = ["scripts", "tests", "manager"]
exclude = "(?i)^(venv|\\.venv|build|dist|\\.git)(/|$)"
cache_dir = ".mypy_cache"

[[tool.mypy.overrides]]
module = ["anybadge.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["typer.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pydantic.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pydantic_settings.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["structlog", "structlog.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["yt_dlp", "yt_dlp.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["scripts", "manager"]

[tool.coverage.run]
branch = true
source = ["scripts", "manager"]
relative_files = true
omit = [
  "*/.venv/*",
  "*/.venv-wsl/*",
  "tests/**",
  "**/__init__.py",
  "**/__main__.py",
]
parallel = true
concurrency = ["thread", "multiprocessing"]

[tool.coverage.report]
skip_empty = true
show_missing = true
fail_under = 0
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
]
