[build-system]
requires = ["setuptools>=82.0.1", "wheel>=0.47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "radio_manager"
description = "Менеджер онлайн радио странции"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "yt-dlp>=2026.3.17",
  "psycopg[binary]>=3.3.4",
  "sqlalchemy>=2.0.51",
  "alembic>=1.18.4",
  "fastapi>=0.138.0",
  "uvicorn>=0.49.0",
  "pydantic>=2.13.4",
  "pydantic-settings>=2.14.2",
  "pyyaml>=6.0.3",
  "structlog>=26.1.0"
]
[project.optional-dependencies]
dev = [
  "ruff>=0.15.18",
  "black==26.5.1",
  "pytest>=9.1.1",
  "pytest-asyncio>=1.4.0",
  "pytest-cov>=7.1.0",
  "mypy>=2.1.0",
  "pre-commit>=4.6.0",
  "coverage[toml]>=7.14.3",
  "anybadge>=1.16.0",
  "pip-audit>=2.10.1",
  "httpx>=0.28.1",
  "types-PyYAML>=6.0.12.20260518"
]

[tool.setuptools.packages.find]
where = ["."]

# ---------- Black ----------
[tool.black]
line-length = 100
target-version = ["py311"]
skip-string-normalization = false

# ---------- Ruff (новая схема 0.6+) ----------
[tool.ruff]
line-length = 100
target-version = "py311"
respect-gitignore = true
exclude = ["*.j2"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PT", "RUF", "C4", "ANN"]
ignore = ["RUF001", "RUF002", "RUF003"]
# Часто удобно игнорить F401 в __init__.py, где реэкспортируем API:
per-file-ignores = { "__init__.py" = ["F401"] }

[tool.ruff.lint.isort]
known-first-party = ["scripts", "manager", "tests"]
combine-as-imports = true

# Форматирование отдадим Black; Ruff не будет форматить код как форматтер.
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
strict_optional = false
disallow_untyped_defs = false
files = ["scripts", "tests", "manager"]
exclude = "(?i)^(venv|\\.venv|build|dist|\\.git)(/|$)"
cache_dir = ".mypy_cache"

[[tool.mypy.overrides]]
module = ["anybadge.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pydantic.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pydantic_settings.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["structlog", "structlog.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["yt_dlp", "yt_dlp.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["scripts", "manager"]
markers = [
  "integration: tests that need external services such as PostgreSQL"
]

[tool.coverage.run]
branch = true
source = ["scripts", "manager"]
relative_files = true
omit = [
  "*/.venv/*",
  "*/.venv-wsl/*",
  "tests/**",
  "**/__init__.py",
  "**/__main__.py",
  "manager/logger.py",
  "manager/main.py",
  "manager/prefetch/**",
  "manager/search/search_service.py",
  "manager/track_queue/models.py",
]
parallel = true
concurrency = ["thread", "multiprocessing"]

[tool.coverage.report]
skip_empty = true
show_missing = true
fail_under = 100
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
]
